--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <title>Naman Sharma</title>
    </head>
-   <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="images/favicon.ico">
+   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.ico">
    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Merriweather+Sans:ital@1&family=Neucha&family=Quicksand:wght@300&family=Righteous&display=swap" rel="stylesheet"> 
    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital@1&family=Neucha&family=Quicksand:wght@300&family=Righteous&display=swap" rel="stylesheet">
  <body>
      <div class = "top" >
          <h1 class="title">I'm Rudra.</h1>
          <p class="fullsub">a <span class="subheading">student</span> and a <span class="subheading">programmer</span> .</p>
-         <img class="land" src="images/forwebsitemain.png" alt="">
-         <img class="cloud1" src="images/cloud1.png" alt="">
-         <img class="cloud2" src="images/cloud2.png" alt="">
-         <img class="dp" src="images/dp.png" alt="">
+         <img class="land" src="forwebsitemain.png" alt="">
+         <img class="cloud1" src="cloud1.png" alt="">
+         <img class="cloud2" src="cloud2.png" alt="">
+         <img class="dp" src="dp.png" alt="">
      </div>
    
       <div class = "middle">
@@ -23,18 +23,18 @@
          <p class="intro">I am an undergraduate persuing computer science with a specialization in Big data analytics. I love to Code and sketch ❤️. </p>
          <hr class="hr1">
          <div class="skills">
-            <img class="img" src="images/skill.png" alt="">
+            <img class="img" src="skill.png" alt="">
             <h2>Skills</h2>
             <p class="forsew">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lorem est, finibus vel eros luctus </p>
          </div>
          <div class="experience">
-            <img class="img" src="images/experience.png" alt="">
+            <img class="img" src="experience.png" alt="">
             <h2>Experience</h2>
             <p class="forsew">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lorem est, finibus vel eros luctus </p>
 
          </div>
          <div class="work">
-            <img class="img" src="images/working.png" alt="">
+            <img class="img" src="working.png" alt="">
             <h2>Work</h2>
             <p class="forsew">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lorem est, finibus vel eros luctus </p>
             
