--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
     <meta charset="UTF-8">
-    <title>Naman Sharma</title>
+    <title>Rudra Chaudhary</title>
    </head>
    <link rel="stylesheet" href="style.css">
   <link rel="icon" href="favicon.ico">
